--- a/mojoproject.toml
+++ b/mojoproject.toml
@@ -1,12 +1,19 @@
 [project]
 authors = ["Seth Stadick <sstadick@gmail.com>"]
-channels = ["https://conda.modular.com/max-nightly", "https://conda.modular.com/max", "https://repo.prefix.dev/modular-community", "conda-forge"]
+channels = [
+    "https://conda.modular.com/max-nightly",
+    "https://conda.modular.com/max",
+    "https://repo.prefix.dev/modular-community",
+    "conda-forge",
+]
 name = "ish"
 platforms = ["osx-arm64"]
 version = "0.1.0"
 
 [tasks]
-build = "magic run mojo build -I /Users/sethstadick/dev/ExtraMojo -o ish main.mojo"
+build = "magic run mojo build -I /Users/u103330/dev/ExtraMojo -o ish main.mojo"
+pkglib = "magic run mojo package -I /Users/u103330/dev/ExtraMojo ./ishlib"
+testlib = "magic run mojo test -I ./ishlib ./tests"
 
 [dependencies]
 max = "=25.1.0"
