--- a/mojoproject.toml
+++ b/mojoproject.toml
@@ -5,9 +5,10 @@ channels = [
     "https://conda.modular.com/max",
     "https://repo.prefix.dev/modular-community",
     "conda-forge",
+    "bioconda"
 ]
 name = "ish"
-platforms = ["osx-arm64", "linux-64"]
+platforms = ["linux-64"]
 version = "0.1.0"
 
 [tasks]
@@ -18,4 +19,5 @@ testlib = "magic run mojo test -I ./ishlib ./tests"
 
 [dependencies]
 max = "=25.1.0"
+fasta3 = { version = ">=36.3.8,<37", channel = "bioconda" }
 # extramojo = ">=0.9.0,<0.10"
