--- a/mojoproject.toml
+++ b/mojoproject.toml
@@ -12,7 +12,10 @@ platforms = ["linux-64"]
 version = "0.1.0"
 
 [tasks]
-build-bench = "magic run mojo build --march native -I /home/ubuntu/dev/ExtraMojo -I ./ishlib -o ish-aligner ./ish_bench_aligner.mojo"
+build-bench = "magic run mojo build -D SIMD_MOD=1 --march native -I /home/ubuntu/dev/ExtraMojo -I ./ishlib -o ish-aligner ./ish_bench_aligner.mojo"
+build-bench-128 = "magic run mojo build -D SIMD_MOD=4 --march native -I /home/ubuntu/dev/ExtraMojo -I ./ishlib -o ish-aligner-128 ./ish_bench_aligner.mojo"
+build-bench-256 = "magic run mojo build -D SIMD_MOD=2 --march native -I /home/ubuntu/dev/ExtraMojo -I ./ishlib -o ish-aligner-256 ./ish_bench_aligner.mojo"
+build-bench-512 = "magic run mojo build -D SIMD_MOD=1 --march native -I /home/ubuntu/dev/ExtraMojo -I ./ishlib -o ish-aligner-512 ./ish_bench_aligner.mojo"
 build = "magic run mojo build -I /home/ubuntu/dev/ExtraMojo -o ish main.mojo"
 pkglib = "magic run mojo package -I /home/ubuntu/dev/ExtraMojo ./ishlib"
 testlib = "magic run mojo test -I ./ishlib ./tests"
