--- a/mojoproject.toml
+++ b/mojoproject.toml
@@ -23,4 +23,4 @@ testlib = "magic run mojo test -I ./ishlib ./tests"
 [dependencies]
 max = "=25.1.0"
 #fasta3 = { version = ">=36.3.8,<37", channel = "bioconda" }
-# extramojo = ">=0.9.0,<0.10"
+# extramojo = "=0.11.0"
