--- a/mojoproject.toml
+++ b/mojoproject.toml
@@ -22,5 +22,7 @@ testlib = "magic run mojo test -I ishlib -I ../ExtraMojo"
 
 [dependencies]
 max = "=25.1.0"
+python = ">=3.12.9,<3.13"
+pip = ">=25.0.1,<26"
 #fasta3 = { version = ">=36.3.8,<37", channel = "bioconda" }
 # extramojo = "=0.11.0"
