feat: wire basic-semi-global into cli

--- a/mojoproject.toml
+++ b/mojoproject.toml
@@ -8,21 +8,19 @@ channels = [
     "bioconda",
 ]
 name = "ish"
-platforms = ["osx-arm64", "linux-64"]
+platforms = ["osx-arm64", "linux-64", "linux-aarch64"]
 version = "0.1.0"
 
 [tasks]
-build-bench = "magic run mojo build -D SIMD_MOD=1 --march native -I /Users/u103330/dev/ExtraMojo -I ./ishlib -o ish-aligner ./ish_bench_aligner.mojo"
-build-bench-128 = "magic run mojo build -D SIMD_MOD=4 --march native -I /Users/u103330/dev/ExtraMojo -I ./ishlib -o ish-aligner-128 ./ish_bench_aligner.mojo"
-build-bench-256 = "magic run mojo build -D SIMD_MOD=2 --march native -I /Users/u103330/dev/ExtraMojo -I ./ishlib -o ish-aligner-256 ./ish_bench_aligner.mojo"
-build-bench-512 = "magic run mojo build -D SIMD_MOD=1 --march native -I /Users/u103330/dev/ExtraMojo -I ./ishlib -o ish-aligner-512 ./ish_bench_aligner.mojo"
-build = "magic run mojo build -I /Users/u103330/dev/ExtraMojo -o ish main.mojo"
-pkglib = "magic run mojo package -I /Users/u103330/dev/ExtraMojo ./ishlib"
+build-bench = "magic run mojo build -D SIMD_MOD=1 --march native  -I ./ishlib -o ish-aligner ./ish_bench_aligner.mojo"
+build-bench-128 = "magic run mojo build -D SIMD_MOD=4 --march native  -I ./ishlib -o ish-aligner-128 ./ish_bench_aligner.mojo"
+build-bench-256 = "magic run mojo build -D SIMD_MOD=2 --march native  -I ./ishlib -o ish-aligner-256 ./ish_bench_aligner.mojo"
+build-bench-512 = "magic run mojo build -D SIMD_MOD=1 --march native  -I ./ishlib -o ish-aligner-512 ./ish_bench_aligner.mojo"
+build = "magic run mojo build  -o ish main.mojo"
+pkglib = "magic run mojo package ./ishlib"
 testlib = "magic run mojo test -I ishlib -I ../ExtraMojo"
 
 [dependencies]
-max = "=25.1.0"
-python = ">=3.12.9,<3.13"
-pip = ">=25.0.1,<26"
+max = "=25.1.1"
+extramojo = "=0.11.0"
 #fasta3 = { version = ">=36.3.8,<37", channel = "bioconda" }
-# extramojo = "=0.11.0"
