--- a/mojoproject.toml
+++ b/mojoproject.toml
@@ -17,7 +17,7 @@ build-bench-128 = "magic run mojo build -D SIMD_MOD=4 --march native  -I ./ishli
 build-bench-256 = "magic run mojo build -D SIMD_MOD=2 --march native  -I ./ishlib -o ish-aligner-256 ./ish_bench_aligner.mojo"
 build-bench-512 = "magic run mojo build -D SIMD_MOD=1 --march native  -I ./ishlib -o ish-aligner-512 ./ish_bench_aligner.mojo"
 build-bench-gpu = "magic run mojo build -D SIMD_MOD=1 --march native  -I ./ishlib -o ish-aligner-gpu ./ish_bench_aligner_gpu.mojo"
-build = "magic run mojo build  --march native -o ish main.mojo"
+build = "magic run mojo build -D ISH_LOG_LEVEL=info --march native -o ish main.mojo"
 debug = "magic run mojo build --debug-level line-tables --march native -o ish main.mojo"
 pkglib = "magic run mojo package ./ishlib"
 testlib = "magic run mojo test -I ishlib"
