chore: update for mojo 25.4
Signed-off-by: Seth Stadick <sstadick@gmail.com>

chore: update extramojo version

Signed-off-by: Seth Stadick <sstadick@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,7 @@ jobs:
           name: Install Mojo and deps
           command: |
             export PATH="$PATH:/home/circleci/.pixi/bin"
+            pixi global install rattler-build
             pixi install --locked
       - run:
           name: Run tests
