--- a/pixi.toml
+++ b/pixi.toml
@@ -1,14 +1,23 @@
-[project]
-authors = ["Seth Stadick <sstadick@gmail.com>"]
+[workspace]
+authors = ["Seth Stadick <seth_stadick@bio-rad.com>"]
 channels = [
     "https://conda.modular.com/max-nightly",
     "https://conda.modular.com/max",
     "https://repo.prefix.dev/modular-community",
+    "https://prefix.dev/pixi-build-backends",
     "conda-forge",
 ]
-name = "ish"
 platforms = ["osx-arm64", "linux-64", "linux-aarch64"]
+preview = ["pixi-build"]
+
+[package]
+name = "ish"
 version = "1.1.1"
+license = "Apache-2.0"
+
+[package.build]
+backend = { name = "pixi-build-rattler-build", version = "0.1.*" }
+
 
 [tasks]
 build = "pixi run mojo build -D ISH_LOG_LEVEL=info --march native -o ish main.mojo"
@@ -28,6 +37,7 @@ build-bench-512 = "pixi run mojo build -D SIMD_MOD=1 --march native  -I . -o ish
 build-bench-gpu-all = "pixi run mojo build -D ISH_LOG_LEVEL=timing -D SIMD_MOD=1 --march native  -I . -o ish-aligner-gpu ./benchmarking/ish_bench_aligner_gpu.mojo"
 
 [dependencies]
-max = "=25.3.0"
-zlib = ">=1.3.1,<2"
-extramojo = "=0.14.0"
+modular = "=25.4.0"
+rattler-build = "*"
+# extramojo = { git = "https://github.com/ExtraMojo/ExtraMojo.git" }
+extramojo = "=0.15.0"
