--- a/recipe.yaml
+++ b/recipe.yaml
@@ -1,9 +1,9 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/prefix-dev/recipe-format/main/schema.json
 
 context:
-  version: "1.3.0"
-  modular_version: "=25.4"
-  extramojo_version: "=0.15"
+  version: "1.4.0"
+  mojo_version: "=0.25.6"
+  extramojo_version: "=0.18"
 
 
 package:
@@ -29,12 +29,12 @@ build:
 
 requirements:
   host:
-      - modular ${{ modular_version }}
+      - mojo-compiler ${{ mojo_version }}
       - extramojo ${{ extramojo_version }}
       - zlib >=1.3.1,<2
 
   run:
-    - modular ${{ modular_version }}
+    - mojo-compiler ${{ mojo_version }}
     - zlib >=1.3.1,<2
 
 tests:
@@ -44,7 +44,7 @@ tests:
           - mojo test -I ${{ PREFIX }}/share/mojo/ishlib.mojopkg tests
     requirements:
       run:
-        - modular ${{ modular_version }}
+        - mojo-compiler ${{ mojo_version }}
         - extramojo ${{ extramojo_version }} 
         - zlib >=1.3.1,<2
 
